<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
  	android:title="Dtouch Markers"
  	android:key="dtouch_markers">
  
  	<EditTextPreference
  		android:key="@string/min_branches"
  		android:title="Minimum Branches"
  		android:summary="Please enter the minimum number of branches"
  		android:dialogTitle="Minimum Branches"
  		android:dialogMessage="Minimum Branches"
  		android:numeric="integer"
  		android:maxLength="2"
  		android:defaultValue="8" />
	
  	<EditTextPreference
 		android:key="@string/max_branches"
 		android:title="Maximum Branches"
 		android:summary="Please enter the maximum number of branches"
 		android:dialogTitle="Maximum Branches"
 		android:dialogMessage="Maximum Branches"
 		android:defaultValue="8" 
 		android:numeric="integer"
  		android:maxLength="2"/>
	
	<EditTextPreference
 		android:key="@string/empty_branches"
 		android:title="Empty Branches"
 		android:summary="Please enter the number of empty branches"
 		android:dialogTitle="Empty Branches"
 		android:dialogMessage="Empty Branches"
 		android:defaultValue="0" 
 		android:numeric="integer"
  		android:maxLength="1"/>
 	
 	<EditTextPreference
 		android:key="@string/validation_branches"
 		android:title="Maximum Validation Branches"
 		android:summary="Please enter the maximum number of validation branches"
 		android:dialogTitle="Maximum Validation Branches"
 		android:dialogMessage="Maximum Validation Branches"
 		android:defaultValue="4" 
 		android:numeric="integer"
  		android:maxLength="1"/>
  		
 	<EditTextPreference
 		android:key="@string/max_leaves"
 		android:title="Maximum Leaves"
 		android:summary="Please enter the maximum number of leaves in a branch"
 		android:dialogTitle="Maximum Leaves in a branch"
 		android:dialogMessage="Maximum Leaves in a branch"
 		android:defaultValue="10"
 		android:numeric="integer"
  		android:maxLength="3"/>
  		
  	<EditTextPreference
 		android:key="@string/validation_branch_leaves"
 		android:title="Validation Branch leaves"
 		android:summary="Please enter the number of leaves in a validation branch"
 		android:dialogTitle="Leaves in a validation Branch"
 		android:dialogMessage="Leaves in a validation Branch"
 		android:defaultValue="1"
 		android:numeric="integer"
  		android:maxLength="1"/>

  	<EditTextPreference
 		android:key="@string/checksum_modulo"
 		android:title="Validation checksum"
 		android:summary="Please enter the modulo for the checksum"
 		android:dialogTitle="Checksum Modulo"
 		android:dialogMessage="Checksum Modulo"
 		android:defaultValue="10"
 		android:numeric="integer"
  		android:maxLength="2"/>
  	
  	<EditTextPreference
 		android:key="@string/marker_occurrence"
 		android:title="Marker occurrence"
 		android:summary="Please enter the minimum number of marker occurrence"
 		android:dialogTitle="Marker occurrence"
 		android:dialogMessage="Marker occurrence"
 		android:defaultValue="2"
 		android:numeric="integer"
  		android:maxLength="2"/>
  		
  </PreferenceCategory>
  
  <PreferenceCategory android:title="CameraSurface Preview"
	android:key="camerasurface">
	<EditTextPreference
 		android:key="@string/no_of_tiles"
 		android:title="Camera Tiles"
 		android:summary="Please enter the number of camera tiles"
 		android:dialogTitle="Camera Tiles"
 		android:dialogMessage="Camera Tiles"
 		android:defaultValue="2"
 		android:numeric="integer"
  		android:maxLength="1"/>
  </PreferenceCategory>
</PreferenceScreen>
